[BugTrapSort] Added ASLR support. Updated .ini-file.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8414 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -25,7 +25,7 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=shareaza.exe:00477BA4|shareaza.exe:01197BA4|shareaza.exe:002B4579|shareaza.exe:002F4A7E|shareaza.exe:00328B73|shareaza.exe:012C4579|shareaza.exe:01304A7E|shareaza.exe:01338b73|shareaza.exe:003978F1|shareaza.exe:004046BF|shareaza.exe:00407789|shareaza.exe:0040EB4E|shareaza.exe:0040EBF4|shareaza.exe:004444C7|shareaza.exe:00477F22|shareaza.exe:0040B7B4|shareaza.exe:0040B913|shareaza.exe:0040B9E6|shareaza.exe:00477E3A|shareaza.exe:0040D025|shareaza.exe:0040D08C|shareaza.exe:0040A8F6|shareaza.exe:002C7E3A|shareaza.exe:002B7E3A|shareaza.exe:013A7E3A|shareaza.exe:01374A55|shareaza.exe:0133483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
+ignore=shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|shareaza.exe:78F1|shareaza.exe:46BF|shareaza.exe:7789|shareaza.exe:EB4E|shareaza.exe:EBF4|shareaza.exe:44C7|shareaza.exe:7F22|shareaza.exe:B7B4|shareaza.exe:B913|shareaza.exe:B9E6|shareaza.exe:7E3A|shareaza.exe:D025|shareaza.exe:D08C|shareaza.exe:A8F6|shareaza.exe:4A55|shareaza.exe:483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
 
 ; All other section names treated as sort rule names
 ; [Rule name]
@@ -34,57 +34,65 @@ ignore=shareaza.exe:00477BA4|shareaza.exe:01197BA4|shareaza.exe:002B4579|shareaz
 ; output			- Output path (with keywords)
 
 ; ------------------------------------------------------------------------
-; Fixed
+; Fixed 2.5.1.0
 
 [CDownloadTransferHTTP::OnDropped]
-if={ADDRESS}
-is=00dc545e
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 545e
 output=C:\Projects\Shareaza\crashes\fixed\CDownloadTransferHTTP OnDropped\{VER_NUMBER}\{TIMESTAMP}
 
 [CLibraryWnd::OnCollection]
-if={ADDRESS}
-is=013eb1ac
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 b1ac
 output=C:\Projects\Shareaza\crashes\fixed\CLibraryWnd OnCollection\{VER_NUMBER}\{TIMESTAMP}
 
 [CMatchFile::GetFilteredCount]
-if={ADDRESS}
-is=00416BC9
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 6BC9
 output=C:\Projects\Shareaza\crashes\fixed\CMatchFile GetFilteredCount\{VER_NUMBER}\{TIMESTAMP}
 
 [CFragmentedFile::VirtualRead]
-if={ADDRESS}
-is=012D044C|005B044C|009f716b|009f6f6b
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 044C|2.5.1.0 716b|2.5.1.0 6f6b
 output=C:\Projects\Shareaza\crashes\fixed\CFragmentedFile VirtualRead\{VER_NUMBER}\{TIMESTAMP}
 
 [CFragmentBar::DrawFragment]
-if={ADDRESS}
-is=006006ED
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 06ED
 output=C:\Projects\Shareaza\crashes\fixed\CFragmentBar DrawFragment\{VER_NUMBER}\{TIMESTAMP}
 
 [CLibraryBuilderInternals::CopyID3v2Field]
-if={ADDRESS}
-is=00594497
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 4497
 output=C:\Projects\Shareaza\crashes\fixed\CLibraryBuilderInternals CopyID3v2Field\{VER_NUMBER}\{TIMESTAMP}
 
 [CBTClient::OnExtended]
-if={ADDRESS}
-is=015680E2|014980E2
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 80E2
 output=C:\Projects\Shareaza\crashes\fixed\CBTClient OnExtended\{VER_NUMBER}\{TIMESTAMP}
 
 [CPongCache::Add]
-if={ADDRESS}
-is=005820c0
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 20c0
 output=C:\Projects\Shareaza\crashes\fixed\CPongCache Add\{VER_NUMBER}\{TIMESTAMP}
 
 [CFileExecutor::IsSafeExecute]
-if={ADDRESS}
-is=00600D6B
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 0D6B
 output=C:\Projects\Shareaza\crashes\fixed\CFileExecutor IsSafeExecute\{VER_NUMBER}\{TIMESTAMP}
 
 [CAlbumFolder::OrganiseFile]
-if={ADDRESS}
-is=0050D1A6
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 D1A6
 output=C:\Projects\Shareaza\crashes\fixed\CAlbumFolder OrganiseFile\{VER_NUMBER}\{TIMESTAMP}
+
+; ------------------------------------------------------------------------
+; Fixed 2.5.0.0
+
+[CLibraryTipCtrl::OnPrepare]
+if={VER_NUMBER} {ADDRESS}
+is=2.5.0.0 d5a4
+output=C:\Projects\Shareaza\crashes\fixed\CLibraryTipCtrl OnPrepare\{VER_NUMBER}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Other software
@@ -151,6 +159,16 @@ output=C:\Projects\Shareaza\crashes\other\Viruses\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Codecs
+
+[ArcSoft H.264]
+if={MODULE}
+is=h264decfilter.ax
+output=C:\Projects\Shareaza\crashes\codecs\ArcSoft H.264\{MODULE}\{TIMESTAMP}
+
+[3ivx MPEG-4]
+if={MODULE}
+is=3ivx_dec.dll
+output=C:\Projects\Shareaza\crashes\codecs\3ivx MPEG-4\{MODULE}\{TIMESTAMP}
 
 [AC3]
 if={MODULE}
@@ -276,93 +294,88 @@ is=ILLEGAL_INSTRUCTION
 output=C:\Projects\Shareaza\crashes\known\ILLEGAL_INSTRUCTION\{CPU}\{TIMESTAMP}
 
 [recv]
-if={ADDRESS}
-is=005E2785|004BB87C|008E90BA|008e96ba|01132785
-output=C:\Projects\Shareaza\crashes\known\recv\{TIMESTAMP}
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 2785|2.5.1.0 B87C|2.5.1.0 90BA|2.5.1.0 96ba|2.5.1.0 2785
+output=C:\Projects\Shareaza\crashes\known\recv\{VER_NUMBER}\{TIMESTAMP}
 
 [CLibraryFile::IsShared]
-if={ADDRESS}
-is=00EA3A27|00553A27|01513A27|01523a27
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 3a27
 output=C:\Projects\Shareaza\crashes\known\library\CLibraryFile IsShared\{VER_NUMBER}\{TIMESTAMP}
 
-[CLibraryDictionary::Search]
-if={ADDRESS}
-is=008F6BD7
-output=C:\Projects\Shareaza\crashes\known\search\CLibraryDictionary Search\{VER_NUMBER}\{TIMESTAMP}
-
 [CSearchManager::Find]
-if={ADDRESS}
-is=004148CD|00306BD7|00406BD7|001D6BD7|00B76BD7|00e16bd7
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 6bd7
 output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{TIMESTAMP}
 
 [CManagedSearch::ExecuteNeighbours]
-if={ADDRESS}
-is=00417E6B
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 7E6B
 output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{TIMESTAMP}
 
 [CManagedSearch::Execute]
-if={ADDRESS}
-is=0058D099|0058d0c7
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 D099|2.5.1.0 d0c7
 output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{TIMESTAMP}
 
 [CSearchManager::OnRun]
-if={ADDRESS}
-is=0056d963
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 d963
 output=C:\Projects\Shareaza\crashes\known\search\CSearchManager OnRun\{VER_NUMBER}\{TIMESTAMP}
 
 [CSearchManager::~CSearchManager]
-if={ADDRESS}
-is=00B51BFF
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 1BFF
 output=C:\Projects\Shareaza\crashes\known\search\CSearchManager ~CSearchManager\{VER_NUMBER}\{TIMESTAMP}
 
 [CQuerySearch::BuildWordList]
-if={ADDRESS}
-is=005798F2
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 98F2
 output=C:\Projects\Shareaza\crashes\known\search\CQuerySearch BuildWordList\{VER_NUMBER}\{TIMESTAMP}
 
 [CDockContext::StartDrag]
-if={ADDRESS}
-is=0044EEFE|010D2E13|00452E13|013b6105
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 EEFE|2.5.1.0 2E13|2.5.1.0 2E13|2.5.1.0 6105
 output=C:\Projects\Shareaza\crashes\known\CDockContext StartDrag\{VER_NUMBER}\{TIMESTAMP}
 
 [CLibraryBuilderInternals::ReadPDF]
-if={ADDRESS}
-is=00446164|014560B3
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 6164|2.5.1.0 60B3
 output=C:\Projects\Shareaza\crashes\known\ReadPDF\{VER_NUMBER}\{TIMESTAMP}
 
 [CSkin::TrackPopupMenu]
-if={ADDRESS}
-is=0044953A
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 953A
 output=C:\Projects\Shareaza\crashes\known\CSkin TrackPopupMenu\{VER_NUMBER}\{TIMESTAMP}
 
 [CDownloadTransferED2K::SelectFragment]
-if={ADDRESS}
-is=005C6C6B
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 6C6B
 output=C:\Projects\Shareaza\crashes\known\CDownloadTransferED2K SelectFragment\{VER_NUMBER}\{TIMESTAMP}
 
 [CDownloadTransferBT::SelectFragment]
-if={ADDRESS}
-is=005C8B43
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 8B43
 output=C:\Projects\Shareaza\crashes\known\CDownloadTransferBT SelectFragment\{VER_NUMBER}\{TIMESTAMP}
 
 [CDownloadTransferBT::SendRequests]
-if={ADDRESS}
-is=005C91F9
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 91F9
 output=C:\Projects\Shareaza\crashes\known\CDownloadTransferBT SendRequests\{VER_NUMBER}\{TIMESTAMP}
 
 [CDownloadWithFile::GetEmptyFragmentList]
-if={ADDRESS}
-is=005C0048
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 0048
 output=C:\Projects\Shareaza\crashes\known\CDownloadWithFile GetEmptyFragmentList\{VER_NUMBER}\{TIMESTAMP}
 
 [CHomeDownloadsBox::Update]
-if={ADDRESS}
-is=00c826eb
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 26eb
 output=C:\Projects\Shareaza\crashes\known\CHomeDownloadsBox Update\{VER_NUMBER}\{TIMESTAMP}
 
 [CSchema::CheckURI]
-if={ADDRESS}
-is=0013116e
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 116e
 output=C:\Projects\Shareaza\crashes\known\CSchema CheckURI\{VER_NUMBER}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
