[BugTrapSort] Updated .ini-file.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8418 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -25,7 +25,7 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|shareaza.exe:78F1|shareaza.exe:46BF|shareaza.exe:7789|shareaza.exe:EB4E|shareaza.exe:EBF4|shareaza.exe:44C7|shareaza.exe:7F22|shareaza.exe:B7B4|shareaza.exe:B913|shareaza.exe:B9E6|shareaza.exe:7E3A|shareaza.exe:D025|shareaza.exe:D08C|shareaza.exe:A8F6|shareaza.exe:4A55|shareaza.exe:483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
+ignore=shareaza.exe:1F1A|shareaza.exe:4F07|shareaza.exe:28A4|shareaza.exe:29A3|shareaza.exe:2A6B|shareaza.exe:1C78|shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|shareaza.exe:78F1|shareaza.exe:46BF|shareaza.exe:7789|shareaza.exe:EB4E|shareaza.exe:EBF4|shareaza.exe:44C7|shareaza.exe:7F22|shareaza.exe:B7B4|shareaza.exe:B913|shareaza.exe:B9E6|shareaza.exe:7E3A|shareaza.exe:D025|shareaza.exe:D08C|shareaza.exe:A8F6|shareaza.exe:4A55|shareaza.exe:483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
 
 ; All other section names treated as sort rule names
 ; [Rule name]
@@ -35,6 +35,11 @@ ignore=shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|s
 
 ; ------------------------------------------------------------------------
 ; Fixed 2.5.1.0
+
+[RenderFile]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.1.0 1485 mediaplayer.dll
+output=C:\Projects\Shareaza\crashes\fixed\RenderFile\{VER_NUMBER}\{TIMESTAMP}
 
 [CDownloadTransferHTTP::OnDropped]
 if={VER_NUMBER} {ADDRESS}
@@ -305,7 +310,7 @@ output=C:\Projects\Shareaza\crashes\known\library\CLibraryFile IsShared\{VER_NUM
 
 [CSearchManager::Find]
 if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 6bd7
+is=2.5.1.0 6bd7|2.5.1.0 6B66
 output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{TIMESTAMP}
 
 [CManagedSearch::ExecuteNeighbours]
