--- a/shareaza/RegExp/RegExp.rc
+++ b/shareaza/RegExp/RegExp.rc
@@ -39,18 +39,18 @@ IDR_MAINFRAME           ICON                    "res\\RegExp.ico"
 //
 
 IDD_REGEXP_DIALOG DIALOGEX 0, 0, 320, 200
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "RegExp"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,209,179,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,263,179,50,14
+    DEFPUSHBUTTON   "OK",IDOK,186,177,60,16
+    PUSHBUTTON      "Cancel",IDCANCEL,253,177,60,16
     EDITTEXT        IDC_INPUT,7,19,306,41,ES_MULTILINE | ES_WANTRETURN | WS_VSCROLL
     LTEXT           "Input text:",IDC_STATIC,7,7,306,8
     LTEXT           "Regular expression:",IDC_STATIC,7,63,306,8
     EDITTEXT        IDC_REGEXP,7,74,306,14,ES_AUTOHSCROLL
-    LISTBOX         IDC_RESULT,7,101,306,71,LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_RESULT,7,101,306,68,LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Results:",IDC_STATIC,7,90,306,8
 END
 
