--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -25,7 +25,7 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=shareaza.exe:1F1A|shareaza.exe:4F07|shareaza.exe:28A4|shareaza.exe:29A3|shareaza.exe:2A6B|shareaza.exe:1C78|shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|shareaza.exe:78F1|shareaza.exe:46BF|shareaza.exe:7789|shareaza.exe:EB4E|shareaza.exe:EBF4|shareaza.exe:44C7|shareaza.exe:7F22|shareaza.exe:B7B4|shareaza.exe:B913|shareaza.exe:B9E6|shareaza.exe:7E3A|shareaza.exe:D025|shareaza.exe:D08C|shareaza.exe:A8F6|shareaza.exe:4A55|shareaza.exe:483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
+ignore=shareaza.exe:F4B0|shareaza.exe:1F1A|shareaza.exe:4F07|shareaza.exe:28A4|shareaza.exe:29A3|shareaza.exe:2A6B|shareaza.exe:1C78|shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|shareaza.exe:78F1|shareaza.exe:46BF|shareaza.exe:7789|shareaza.exe:EB4E|shareaza.exe:EBF4|shareaza.exe:44C7|shareaza.exe:7F22|shareaza.exe:B7B4|shareaza.exe:B913|shareaza.exe:B9E6|shareaza.exe:7E3A|shareaza.exe:D025|shareaza.exe:D08C|shareaza.exe:A8F6|shareaza.exe:4A55|shareaza.exe:483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
 
 ; All other section names treated as sort rule names
 ; [Rule name]
@@ -323,6 +323,11 @@ if={VER_NUMBER} {ADDRESS}
 is=2.5.1.0 D099|2.5.1.0 d0c7
 output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{TIMESTAMP}
 
+[CQueryHit::CheckBogus]
+if={VER_NUMBER} {ADDRESS}
+is=2.5.1.0 eef0
+output=C:\Projects\Shareaza\crashes\known\search\CQueryHit CheckBogus\{VER_NUMBER}\{TIMESTAMP}
+
 [CSearchManager::OnRun]
 if={VER_NUMBER} {ADDRESS}
 is=2.5.1.0 d963
@@ -345,7 +350,7 @@ output=C:\Projects\Shareaza\crashes\known\CDockContext StartDrag\{VER_NUMBER}\{T
 
 [CLibraryBuilderInternals::ReadPDF]
 if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 6164|2.5.1.0 60B3
+is=2.5.1.0 6164|2.5.1.0 60B3|2.5.1.0 fd4f
 output=C:\Projects\Shareaza\crashes\known\ReadPDF\{VER_NUMBER}\{TIMESTAMP}
 
 [CSkin::TrackPopupMenu]
