Added mote protection against stupid firewalls/anti-ads.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8447 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -157,6 +157,11 @@ if={MODULE}
 is=netconfig.dll
 output=C:\Projects\Shareaza\crashes\other\Imonitor Employee Activity Monitor\{TIMESTAMP}
 
+[AdGuard]
+if={MODULE}
+is=adguard.dll
+output=C:\Projects\Shareaza\crashes\other\AdGuard\{TIMESTAMP}
+
 [Viruses]
 if={MODULE}
 is=wofurave.dll
