--- a/plugins/Preview/Preview.rc
+++ b/plugins/Preview/Preview.rc
@@ -31,7 +31,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,0,0,1
- PRODUCTVERSION 2,5,1,0
+ PRODUCTVERSION 2,5,2,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -51,10 +51,10 @@ BEGIN
             VALUE "FileDescription", "Shareaza Preview Plugin"
             VALUE "FileVersion", "1, 0, 0, 1"
             VALUE "InternalName", "Preview"
-            VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2009. All rights reserved."
+            VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2009-2010. All rights reserved."
             VALUE "OriginalFilename", "Preview.dll"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 5, 1, 0"
+            VALUE "ProductVersion", "2, 5, 2, 0"
         END
     END
     BLOCK "VarFileInfo"
