--- a/plugins/ImageViewer/ImageViewer_9.vcproj
+++ b/plugins/ImageViewer/ImageViewer_9.vcproj
@@ -255,6 +255,7 @@
 				RuntimeLibrary="0"
 				BufferSecurityCheck="true"
 				EnableFunctionLevelLinking="false"
+				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
