--- a/plugins/MediaLibraryBuilder/MediaLibraryBuilder_9.vcproj
+++ b/plugins/MediaLibraryBuilder/MediaLibraryBuilder_9.vcproj
@@ -251,6 +251,7 @@
 				RuntimeLibrary="0"
 				BufferSecurityCheck="true"
 				EnableFunctionLevelLinking="false"
+				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
