--- a/plugins/RazaWebHook/RazaWebHook_9.vcproj
+++ b/plugins/RazaWebHook/RazaWebHook_9.vcproj
@@ -236,6 +236,7 @@
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
+				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
