--- a/plugins/SWFPlugin/SWFPlugin_9.vcproj
+++ b/plugins/SWFPlugin/SWFPlugin_9.vcproj
@@ -247,6 +247,7 @@
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL"
 				StringPooling="true"
 				RuntimeLibrary="0"
+				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
