[BugTrapSort] Updated .ini-file.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8463 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -25,7 +25,7 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=shareaza.exe:F4B0|shareaza.exe:1F1A|shareaza.exe:4F07|shareaza.exe:28A4|shareaza.exe:29A3|shareaza.exe:2A6B|shareaza.exe:1C78|shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|shareaza.exe:78F1|shareaza.exe:46BF|shareaza.exe:7789|shareaza.exe:EB4E|shareaza.exe:EBF4|shareaza.exe:44C7|shareaza.exe:7F22|shareaza.exe:B7B4|shareaza.exe:B913|shareaza.exe:B9E6|shareaza.exe:7E3A|shareaza.exe:D025|shareaza.exe:D08C|shareaza.exe:A8F6|shareaza.exe:4A55|shareaza.exe:483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
+ignore=shareaza.exe:F4B0|shareaza.exe:1F1A|shareaza.exe:4F07|shareaza.exe:28A4|shareaza.exe:29A3|shareaza.exe:2A6B|shareaza.exe:1C78|shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|shareaza.exe:78F1|shareaza.exe:46BF|shareaza.exe:7789|shareaza.exe:EB4E|shareaza.exe:EBF4|shareaza.exe:44C7|shareaza.exe:7F22|shareaza.exe:B7B4|shareaza.exe:B913|shareaza.exe:B9E6|shareaza.exe:7E3A|shareaza.exe:D025|shareaza.exe:D08C|shareaza.exe:A8F6|shareaza.exe:4A55|shareaza.exe:483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|DUser.dll
 
 ; All other section names treated as sort rule names
 ; [Rule name]
@@ -162,6 +162,11 @@ if={MODULE}
 is=adguard.dll
 output=C:\Projects\Shareaza\crashes\other\AdGuard\{TIMESTAMP}
 
+[HideMyIP]
+if={MODULE}
+is=HMIPCore.dll
+output=C:\Projects\Shareaza\crashes\other\HideMyIP\{TIMESTAMP}
+
 [Viruses]
 if={MODULE}
 is=wofurave.dll
@@ -187,7 +192,7 @@ output=C:\Projects\Shareaza\crashes\codecs\AC3\{MODULE}\{TIMESTAMP}
 
 [DivX]
 if={MODULE}
-is=divx.ax|divxdec.ax
+is=divx.ax|divxdec.ax|divxdech264.ax
 output=C:\Projects\Shareaza\crashes\codecs\DivX\{MODULE}\{TIMESTAMP}
 
 [XviD]
@@ -217,12 +222,12 @@ output=C:\Projects\Shareaza\crashes\codecs\nVIDIA\{MODULE}\{TIMESTAMP}
 
 [FFDShow]
 if={MODULE}
-is=ffdshow.ax|libavcodec.dll|ff_libmad.dll|libmplayer.dll
+is=ffdshow.ax|libavcodec.dll|ff_libmad.dll|libmplayer.dll|libmpeg2_ff.dll
 output=C:\Projects\Shareaza\crashes\codecs\FFDShow\{MODULE}\{TIMESTAMP}
 
-[Nero Video]
+[Nero]
 if={MODULE}
-is=nevideo.ax|NeVideoHD.ax
+is=nevideo.ax|NeVideoHD.ax|NeResize.ax
 output=C:\Projects\Shareaza\crashes\codecs\Nero\{MODULE}\{TIMESTAMP}
 
 [SPlayer]
@@ -242,7 +247,7 @@ output=C:\Projects\Shareaza\crashes\codecs\PowerDVD\{MODULE}\{TIMESTAMP}
 
 [Windows]
 if={MODULE}
-is=drmv2clt.dll|msvidc32.dll
+is=drmv2clt.dll|msvidc32.dll|qdvd.dll
 output=C:\Projects\Shareaza\crashes\codecs\Windows\{MODULE}\{TIMESTAMP}
 
 [Nokia]
@@ -255,14 +260,14 @@ if={MODULE}
 is=ff_realaac.dll
 output=C:\Projects\Shareaza\crashes\codecs\Vista\{MODULE}\{TIMESTAMP}
 
-[Samsung PC Studio 3]
+[Samsung PC Studio]
 if={MODULE}
-is=fun_avcodec.dll
+is=fun_avcodec.dll|Mpeg4DSF.dll
 output=C:\Projects\Shareaza\crashes\codecs\PCStudio\{MODULE}\{TIMESTAMP}
 
 [InterVideo]
 if={MODULE}
-is=IVIVIDEO.ax|MP4VDEC.ax
+is=IVIVIDEO.ax|MP4VDEC.ax|iviaudio.ax
 output=C:\Projects\Shareaza\crashes\codecs\InterVideo\{MODULE}\{TIMESTAMP}
 
 [JetAudio]
@@ -289,6 +294,21 @@ output=C:\Projects\Shareaza\crashes\codecs\FLVSplitter\{MODULE}\{TIMESTAMP}
 if={MODULE}
 is=PCLEMPEGVideoDecoder2.ax
 output=C:\Projects\Shareaza\crashes\codecs\Pinnacle\{MODULE}\{TIMESTAMP}
+
+[Indeo]
+if={MODULE}
+is=ir50_32.dll
+output=C:\Projects\Shareaza\crashes\codecs\Indeo\{MODULE}\{TIMESTAMP}
+
+[QuickTime]
+if={MODULE}
+is=quicktime.qts
+output=C:\Projects\Shareaza\crashes\codecs\QuickTime\{MODULE}\{TIMESTAMP}
+
+[Viscom]
+if={MODULE}
+is=viscommpgdec.dll
+output=C:\Projects\Shareaza\crashes\codecs\Viscom\{MODULE}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Known bugs
