[BugTrapSort] Updated .ini-file.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8466 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -25,13 +25,42 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=shareaza.exe:F4B0|shareaza.exe:1F1A|shareaza.exe:4F07|shareaza.exe:28A4|shareaza.exe:29A3|shareaza.exe:2A6B|shareaza.exe:1C78|shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|shareaza.exe:78F1|shareaza.exe:46BF|shareaza.exe:7789|shareaza.exe:EB4E|shareaza.exe:EBF4|shareaza.exe:44C7|shareaza.exe:7F22|shareaza.exe:B7B4|shareaza.exe:B913|shareaza.exe:B9E6|shareaza.exe:7E3A|shareaza.exe:D025|shareaza.exe:D08C|shareaza.exe:A8F6|shareaza.exe:4A55|shareaza.exe:483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|DUser.dll
+ignore=shareaza.exe:F4B0|shareaza.exe:1F1A|shareaza.exe:4F07|shareaza.exe:28A4|shareaza.exe:29A3|shareaza.exe:2A6B|shareaza.exe:1C78|shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|shareaza.exe:78F1|shareaza.exe:46BF|shareaza.exe:7789|shareaza.exe:EB4E|shareaza.exe:EBF4|shareaza.exe:44C7|shareaza.exe:7F22|shareaza.exe:B7B4|shareaza.exe:B913|shareaza.exe:B9E6|shareaza.exe:7E3A|shareaza.exe:D025|shareaza.exe:D08C|shareaza.exe:A8F6|shareaza.exe:4A55|shareaza.exe:483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|DUser.dll|ATIPDLXX.DLL
 
 ; All other section names treated as sort rule names
 ; [Rule name]
 ; if=				- Expression (with keywords) used to find ...
 ; is=				- ... this substring in it, caseinsensitive, use "|" as delimiter
 ; output			- Output path (with keywords)
+
+
+; ------------------------------------------------------------------------
+; Fixed 2.5.2.0
+
+[CSearchManager::OnRun 1]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.2.0 db91 shareaza.exe
+output=C:\Projects\Shareaza\crashes\fixed\CSearchManager OnRun\{VER_NUMBER}\{TIMESTAMP}
+
+[CSearchManager::OnRun 2]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.2.0 da69 shareaza.exe
+output=C:\Projects\Shareaza\crashes\fixed\CSearchManager OnRun\{VER_NUMBER}\{TIMESTAMP}
+
+[CSearchManager::OnRun 3]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.2.0 6c5b shareaza.exe
+output=C:\Projects\Shareaza\crashes\fixed\CSearchManager OnRun\{VER_NUMBER}\{TIMESTAMP}
+
+[CMatchCtrl::ScrollTo]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.2.0 6ebf shareaza.exe
+output=C:\Projects\Shareaza\crashes\fixed\CMatchCtrl ScrollTo\{VER_NUMBER}\{TIMESTAMP}
+
+[CBuffer::EnsureBuffer]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.2.0 2ca3 shareaza.exe
+output=C:\Projects\Shareaza\crashes\fixed\CBuffer EnsureBuffer\{VER_NUMBER}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Fixed 2.5.1.0
@@ -292,7 +321,7 @@ output=C:\Projects\Shareaza\crashes\codecs\FLVSplitter\{MODULE}\{TIMESTAMP}
 
 [Pinnacle]
 if={MODULE}
-is=PCLEMPEGVideoDecoder2.ax
+is=PCLEMPEGVideoDecoder2.ax|StreamIO.dll
 output=C:\Projects\Shareaza\crashes\codecs\Pinnacle\{MODULE}\{TIMESTAMP}
 
 [Indeo]
