[BugTrapSort] Updated .ini-file.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8483 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -92,7 +92,7 @@ output=C:\Projects\Shareaza\crashes\fixed\CFragmentedFile VirtualRead\{VER_NUMBE
 
 [CFragmentBar::DrawFragment]
 if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 06ED
+is=2.5.1.0 06ED|2.5.2.0 0f2c
 output=C:\Projects\Shareaza\crashes\fixed\CFragmentBar DrawFragment\{VER_NUMBER}\{TIMESTAMP}
 
 [CLibraryBuilderInternals::CopyID3v2Field]
@@ -203,6 +203,11 @@ output=C:\Projects\Shareaza\crashes\other\Viruses\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Codecs
+
+[DRM]
+if={MODULE}
+is=Indiv01.key
+output=C:\Projects\Shareaza\crashes\codecs\DRM\{MODULE}\{TIMESTAMP}
 
 [ArcSoft H.264]
 if={MODULE}
@@ -338,6 +343,11 @@ output=C:\Projects\Shareaza\crashes\codecs\QuickTime\{MODULE}\{TIMESTAMP}
 if={MODULE}
 is=viscommpgdec.dll
 output=C:\Projects\Shareaza\crashes\codecs\Viscom\{MODULE}\{TIMESTAMP}
+
+[Pure Codec]
+if={MODULE}
+is=mtcontain.dll
+output=C:\Projects\Shareaza\crashes\codecs\Pure Codec\{MODULE}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Known bugs
