--- a/plugins/RazaWebHook/RazaWebHook32_9.vcproj
+++ b/plugins/RazaWebHook/RazaWebHook32_9.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="RazaWebHook"
+	Name="RazaWebHook32"
 	ProjectGUID="{7030A905-13CF-40FF-A7CC-9FBA3B6EDF92}"
-	RootNamespace="RazaWebHook"
+	RootNamespace="RazaWebHook32"
 	Keyword="AtlProj"
 	TargetFrameworkVersion="196613"
 	>
@@ -45,14 +45,16 @@
 				PreprocessorDefinitions="_DEBUG"
 				TargetEnvironment="1"
 				GenerateStublessProxies="true"
-				HeaderFileName="RazaWebHook_i.h"
+				TypeLibraryName="$(IntDir)\RazaWebHook.tlb"
+				HeaderFileName="$(IntDir)\RazaWebHook_i.h"
 				DLLDataFileName=""
-				InterfaceIdentifierFileName="RazaWebHook_i.c"
+				InterfaceIdentifierFileName="$(IntDir)\RazaWebHook_i.c"
 				ProxyFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="$(IntDir)"
 				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;_USRDLL"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="3"
@@ -79,8 +81,8 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				IgnoreImportLibrary="true"
-				OutputFile="$(OutDir)\$(ProjectName)32.dll"
-				ModuleDefinitionFile=".\RazaWebHook.def"
+				OutputFile="$(OutDir)\$(ProjectName).dll"
+				ModuleDefinitionFile="RazaWebHook.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -133,14 +135,16 @@
 				PreprocessorDefinitions="_DEBUG"
 				TargetEnvironment="3"
 				GenerateStublessProxies="true"
-				HeaderFileName="RazaWebHook_i.h"
+				TypeLibraryName="$(IntDir)\RazaWebHook.tlb"
+				HeaderFileName="$(IntDir)\RazaWebHook_i.h"
 				DLLDataFileName=""
-				InterfaceIdentifierFileName="RazaWebHook_i.c"
+				InterfaceIdentifierFileName="$(IntDir)\RazaWebHook_i.c"
 				ProxyFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="$(IntDir)"
 				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;_USRDLL"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="3"
@@ -166,8 +170,8 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				IgnoreImportLibrary="true"
-				OutputFile="$(OutDir)\$(ProjectName)64.dll"
-				ModuleDefinitionFile=".\RazaWebHook.def"
+				OutputFile="$(OutDir)\$(ProjectName).dll"
+				ModuleDefinitionFile="RazaWebHook.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="17"
@@ -221,9 +225,10 @@
 				PreprocessorDefinitions="NDEBUG"
 				TargetEnvironment="1"
 				GenerateStublessProxies="true"
-				HeaderFileName="RazaWebHook_i.h"
+				TypeLibraryName="$(IntDir)\RazaWebHook.tlb"
+				HeaderFileName="$(IntDir)\RazaWebHook_i.h"
 				DLLDataFileName=""
-				InterfaceIdentifierFileName="RazaWebHook_i.c"
+				InterfaceIdentifierFileName="$(IntDir)\RazaWebHook_i.c"
 				ProxyFileName=""
 			/>
 			<Tool
@@ -233,6 +238,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="2"
 				OmitFramePointers="true"
+				AdditionalIncludeDirectories="$(IntDir)"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
@@ -256,9 +262,9 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				IgnoreImportLibrary="true"
-				OutputFile="$(OutDir)\$(ProjectName)32.dll"
+				OutputFile="$(OutDir)\$(ProjectName).dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\RazaWebHook.def"
+				ModuleDefinitionFile="RazaWebHook.def"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -314,9 +320,10 @@
 				PreprocessorDefinitions="NDEBUG"
 				TargetEnvironment="3"
 				GenerateStublessProxies="true"
-				HeaderFileName="RazaWebHook_i.h"
+				TypeLibraryName="$(IntDir)\RazaWebHook.tlb"
+				HeaderFileName="$(IntDir)\RazaWebHook_i.h"
 				DLLDataFileName=""
-				InterfaceIdentifierFileName="RazaWebHook_i.c"
+				InterfaceIdentifierFileName="$(IntDir)\RazaWebHook_i.c"
 				ProxyFileName=""
 			/>
 			<Tool
@@ -326,6 +333,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
+				AdditionalIncludeDirectories="$(IntDir)"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
@@ -349,9 +357,9 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				IgnoreImportLibrary="true"
-				OutputFile="$(OutDir)\$(ProjectName)64.dll"
+				OutputFile="$(OutDir)\$(ProjectName).dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\RazaWebHook.def"
+				ModuleDefinitionFile="RazaWebHook.def"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -483,55 +491,6 @@
 			</File>
 			<File
 				RelativePath=".\RazaWebHook.rgs"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="Generated Files"
-			SourceControlFiles="false"
-			>
-			<File
-				RelativePath=".\RazaWebHook_i.c"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="0"
-						CompileAsManaged="0"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|x64"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="0"
-						CompileAsManaged="0"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="0"
-						CompileAsManaged="0"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|x64"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="0"
-						CompileAsManaged="0"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\RazaWebHook_i.h"
 				>
 			</File>
 		</Filter>
