Fixed missed strings for media player Speed, Volume and Position controls.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8518 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -4638,6 +4638,9 @@ BEGIN
     ID_MEDIA_SELECT         "Select and play this file."
     ID_MEDIA_ADD            "Add a media file to the playlist..."
     ID_MEDIA_REMOVE         "Remove the selected media file from the playlist."
+	IDC_MEDIA_POSITION      "Seek to a position in the media file.\nSeek"
+	IDC_MEDIA_SPEED         "Adjust the speed of the media file.\nSpeed"
+	IDC_MEDIA_VOLUME        "Adjust the audio volume.\nVolume"
 END
 
 STRINGTABLE 
